--- a/style.css
+++ b/style.css
@@ -1,51 +1,36 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
-    font-family: "Simonetta",
-        cursive;
-    margin-top: 70px;
+  font-family: "Simonetta", cursive;
+  /* margin: 0;
+  padding: 0; */
+  margin-top: 70px;
 }
 
 .max-viewport {
-    min-height: 100vh;
+  min-height: 100vh;
 }
 
 .transparent {
-    background-color: rgba(175, 76, 6, 0.7);
+  background-color: rgba(175, 76, 6, 0.7);
 }
 
 #banner,
 #contact,
 #social {
-    background: linear-gradient(rgba(139, 69, 19, 0.6), rgba(139, 69, 19, 0.6)),
-        url(assets/img2_1.jpg);
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-
-}
-
-.img-fluid {
-    max-width: 100%;
-    height: auto;
-}
-
-p.lead {
-    background-position: center;
-    text-align: center;
-    float: right;
-}
-
-#whoLink {
-    text-decoration-color: white;
-}
-
-#profilepic {
-    max-width: 250%;
-    height: auto;
+  background: linear-gradient(rgba(139, 69, 19, 0.6), rgba(139, 69, 19, 0.6)),
+    url(assets/img2_1.jpg);
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 a {
-    color: white;
-    text-decoration: none;
-    background-color: transparent;
+  color: white;
+  text-decoration: none;
+  background-color: transparent;
 }
