--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@
 }
 
 body {
-  font-family: "Simonetta", cursive;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif,
+    cursive;
   /* margin: 0;
   padding: 0; */
   margin-top: 70px;
@@ -20,7 +21,8 @@ body {
 
 #banner,
 #contact,
-#social {
+#social,
+.card {
   background: linear-gradient(rgba(139, 69, 19, 0.6), rgba(139, 69, 19, 0.6)),
     url(assets/img2_1.jpg);
   background-attachment: fixed;
@@ -29,8 +31,16 @@ body {
   background-size: cover;
 }
 
+.card-title {
+  text-align: center;
+}
+
 a {
   color: white;
   text-decoration: none;
   background-color: transparent;
+}
+#about,
+#social {
+  color: white;
 }
