--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 * {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif, cursive;
   margin: 0;
   padding: 0;
 }
 
 body {
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif,
-    cursive;
   /* margin: 0;
   padding: 0; */
   margin-top: 70px;
@@ -42,5 +42,5 @@ a {
 }
 #about,
 #social {
-  color: white;
+  text-decoration: white;
 }
