--- a/style.css
+++ b/style.css
@@ -30,6 +30,9 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
 }
+#social {
+  background-color: rgba(139, 69, 19, 0.6);
+}
 
 .card-title {
   text-align: center;
