--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
   background-size: cover;
 }
 #social {
-  background-color: rgba(139, 69, 19, 0.6);
+  background-color: linear-gradient(rgba(139, 69, 19, 0.6), rgba(139, 69, 19, 0.6);
 }
 
 .card-title {
